Recuperacion de informacion

--- a/war/index.html
+++ b/war/index.html
@@ -5,23 +5,26 @@
 <!-- "Quirks Mode". Replacing this declaration     -->
 <!-- with a "Standards Mode" doctype is supported, -->
 <!-- but may lead to some differences in layout.   -->
-
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Hello App Engine</title>
-  </head>
-
-  <body>
-    <h1>Hello App Engine!</h1>
-	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="red_social">Red_social</a></td>
-      </tr>
-    </table>
-  </body>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<link rel="stylesheet" href="style.css">
+</head>
+<div class="imagen">
+<img class="img" src="img/logoescudouptc.png" width="320" height="200" align="center" >
+</div>
+<body>
+	<form action="login" class="login" method="POST">
+		<h1>Red UPTC</h1>
+		<input name="user" type="email" class="login-input" placeholder="Email Address" required/>
+		<input name="password" type="password" class="login-input" placeholder="Password" required/> 
+		<input type="submit" value="Login" class="login-submit" />
+	</form>
+	<footer>
+	<h1> Creado por Estudiantes de Ingenieria de software</h1>
+	<h1>Universidad Pedagogica y Tecnologica de Colombia</h1>
+	<h1>Tunja - Boyacá</h1>
+	</footer>>
+</body>
 </html>
